# bpond

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  demo.tape
.claude/: launch.json
.github/workflows/: release.yml
src/: bubble.rs  canvas.rs  food.rs  ghost_anim.rs  koi.rs  main.rs  pond.rs  rain.rs  ripple.rs  rng.rs  sdf.rs
src/animals/: bear.rs  cat.rs  dog.rs  fish.rs  ghost.rs  mod.rs  owl.rs  penguin.rs  rabbit.rs  shark.rs
src/koi/: draw.rs  mod.rs  physics.rs
tests/: project_rename.rs
